# goodbye-localstack

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  clients.py  main.py  probe.py  s3_coverage.py  settings.py
docs/: evaluation.md
terraform/environments/dev-local/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/environments/minio-s3-only/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_health.py  test_probe_integration.py  test_s3_coverage_integration.py
